fix: z-index modal correct

--- a/src/components/common/open-modal/open-modal.scss
+++ b/src/components/common/open-modal/open-modal.scss
@@ -6,7 +6,7 @@
   @include flex(center, center, column);
   max-width: 25rem;
   position: fixed;
-  z-index: 10;
+  z-index: 30;
   min-width: 25rem;
   left: 50%;
   top: 50%;
@@ -116,6 +116,7 @@
   height: 100%;
   opacity: 0;
   background: rgba(24, 28, 41, 0.80);
+  z-index: 25;
 }
 
 .modal-active {
